--- a/IVSwitcher/UI/SettingPage.xaml
+++ b/IVSwitcher/UI/SettingPage.xaml
@@ -30,7 +30,7 @@
                 <StackPanel
                     Orientation="Horizontal">
                     <Image
-                        Source="Resources/icon.ico" Height="50" Width="50"/>
+                        Source="pack://application:,,,/Resources/icon.ico" Height="50" Width="50"/>
                     <TextBlock
                     VerticalAlignment="Center"
                     Margin="16 0 0 0"
